# diagrams-as-code-template

./: .gitignore  README.md  Taskfile.yml  lefthook.yml  pyproject.toml  renovate.json  squealer.yml
.devcontainer/: Dockerfile  devcontainer.json
diag/: complex.py  simple.py
